--- a/app/src/main/res/layout/fragment_pending_tasks.xml
+++ b/app/src/main/res/layout/fragment_pending_tasks.xml
@@ -18,12 +18,13 @@ tools:context=".PendingTasksFragment">
         android:textSize="24sp"
         android:textStyle="bold" />
 
-<ListView
-    android:id="@+id/listPendingTasks"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:divider="@android:color/darker_gray"
-    android:dividerHeight="1dp"/>
+    <ListView
+        android:id="@+id/listPendingTasks"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/white"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp" />
 
 </LinearLayout>
